--- a/package.json
+++ b/package.json
@@ -8,23 +8,28 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^5.17.25",
+    "@reduxjs/toolkit": "^1.9.3",
     "@syncfusion/ej2-react-charts": "^20.4.52",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.6",
     "recharts": "^2.4.3",
+    "redux": "^4.2.1",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
