--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "igniteui-react-charts": "^18.1.3",
+    "igniteui-react-core": "^18.1.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.3",
